cmake_minimum_required(VERSION 3.16)
project(CodeDemo)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Code1_3 Code1/MemoryPart_HeapArea.cpp)
#add_executable(Code1_2 Code1/MemoryPart_StackArea.cpp)
#add_executable(Code1_1 Code1/MemoryPart_GlobalArea.cpp)
#add_executable(Code1_4 Code1/MemoryPart_NewKey.cpp)

#add_executable(Code2_1 Code2/Ref_demo1.cpp)
#add_executable(Code2_2 Code2/Ref_demo2.cpp)
#add_executable(Code2_3 Code2/Ref_demo3.cpp)
#add_executable(Code2_4 Code2/Ref_demo4.cpp)
#add_executable(Code2_5 Code2/Ref_demo5.cpp)
#add_executable(Code2_6 Code2/Ref_demo6.cpp)

#add_executable(Code3_1 Code3/FuncPro_demo1.cpp)
#add_executable(Code3_2 Code3/FuncPro_demo2.cpp)
#add_executable(Code3_3 Code3/FuncPro_demo3.cpp)
#add_executable(Code3_4 Code3/FuncPro_demo4.cpp)

#add_executable(Code4_1 Code4/Class_demo1.cpp)
#add_executable(Code4_2 Code4/Class_demo2.cpp)
#add_executable(Code4_3 Code4/Class_demo3.cpp)
#add_executable(Code4_4 Code4/Class_demo4.cpp)
#add_executable(Code4_5 Code4/Class_demo5.cpp)
#add_executable(Code4_6 Code4/Class_demo6.cpp)
#add_executable(Code4_7 Code4/Class_demo7.cpp)
#add_executable(Code4_8 Code4/Class_demo8.cpp)
#add_executable(Code4_CirclePoint Code4_CirclePoint/CircleAndPoint.cpp
#        Code4_CirclePoint/Point.cpp Code4_CirclePoint/Point.h
#        Code4_CirclePoint/Circle.cpp Code4_CirclePoint/Circle.h)

#add_executable(Code5_1 Code5/Object_demo1.cpp)
#add_executable(Code5_2 Code5/Object_demo2.cpp)
#add_executable(Code5_3 Code5/Object_demo3.cpp)
#add_executable(Code5_4 Code5/Object_demo4.cpp)
#add_executable(Code5_5 Code5/Object_demo5.cpp)
#add_executable(Code5_6 Code5/Object_demo6.cpp)
#add_executable(Code5_7 Code5/Object_demo7.cpp)
#add_executable(Code5_8 Code5/Object_demo8.cpp)

#add_executable(Code6_1 Code6/This_demo1.cpp)
#add_executable(Code6_2 Code6/This_demo2.cpp)
#add_executable(Code6_3 Code6/This_demo3.cpp)
#add_executable(Code6_4 Code6/Const_func.cpp)

#add_executable(Code7_1 Code7/Key_friend_demo1.cpp)
#add_executable(Code7_2 Code7/Key_friend_demo2.cpp)
#add_executable(Code7_3 Code7/Key_friend_demo3.cpp)

#add_executable(Code8_1 Code8/OperatorOverload_demo1.cpp)