cmake_minimum_required(VERSION 3.16)
project(CodeDemo)

set(CMAKE_CXX_STANDARD 14)

#Code01
#add_executable(Code1_3 Code01/MemoryPart_HeapArea.cpp)
#add_executable(Code1_2 Code01/MemoryPart_StackArea.cpp)
#add_executable(Code1_1 Code01/MemoryPart_GlobalArea.cpp)
#add_executable(Code1_4 Code01/MemoryPart_NewKey.cpp)

#Code02
#add_executable(Code2_1 Code02/Ref_demo1.cpp)
#add_executable(Code2_2 Code02/Ref_demo2.cpp)
#add_executable(Code2_3 Code02/Ref_demo3.cpp)
#add_executable(Code2_4 Code02/Ref_demo4.cpp)
#add_executable(Code2_5 Code02/Ref_demo5.cpp)
#add_executable(Code2_6 Code02/Ref_demo6.cpp)

#Code03
#add_executable(Code3_1 Code03/FuncPro_demo1.cpp)
#add_executable(Code3_2 Code03/FuncPro_demo2.cpp)
#add_executable(Code3_3 Code03/FuncPro_demo3.cpp)
#add_executable(Code3_4 Code03/FuncPro_demo4.cpp)

#Code04
#add_executable(Code4_1 Code04/Class_demo1.cpp)
#add_executable(Code4_2 Code04/Class_demo2.cpp)
#add_executable(Code4_3 Code04/Class_demo3.cpp)
#add_executable(Code4_4 Code04/Class_demo4.cpp)
#add_executable(Code4_5 Code04/Class_demo5.cpp)
#add_executable(Code4_6 Code04/Class_demo6.cpp)
#add_executable(Code4_7 Code04/Class_demo7.cpp)
#add_executable(Code4_8 Code04/Class_demo8.cpp)
#add_executable(Code04_CirclePoint Code04_CirclePoint/CircleAndPoint.cpp
#        Code04_CirclePoint/Point.cpp Code04_CirclePoint/Point.h
#        Code04_CirclePoint/Circle.cpp Code04_CirclePoint/Circle.h)

#Code05
#add_executable(Code5_1 Code05/Object_demo1.cpp)
#add_executable(Code5_2 Code05/Object_demo2.cpp)
#add_executable(Code5_3 Code05/Object_demo3.cpp)
#add_executable(Code5_4 Code05/Object_demo4.cpp)
#add_executable(Code5_5 Code05/Object_demo5.cpp)
#add_executable(Code5_6 Code05/Object_demo6.cpp)
#add_executable(Code5_7 Code05/Object_demo7.cpp)
#add_executable(Code5_8 Code05/Object_demo8.cpp)

#Code06
#add_executable(Code6_1 Code06/This_demo1.cpp)
#add_executable(Code6_2 Code06/This_demo2.cpp)
#add_executable(Code6_3 Code06/This_demo3.cpp)
#add_executable(Code6_4 Code06/Const_func.cpp)

#Code07
#add_executable(Code7_1 Code07/Key_friend_demo1.cpp)
#add_executable(Code7_2 Code07/Key_friend_demo2.cpp)
#add_executable(Code7_3 Code07/Key_friend_demo3.cpp)

#Code08
#add_executable(Code8_1 Code08/OperatorOverload_Add.cpp)
#add_executable(Code8_2 Code08/OperatorOverload_ShiftLeft.cpp)
#add_executable(Code8_3 Code08/OperatorOverload_Increase.cpp)
#add_executable(Code8_4 Code08/OperatorOverload_Decrease.cpp)
#add_executable(Code8_5 Code08/OperatorOverload_Assignment.cpp)
#add_executable(Code8_6 Code08/OperatorOverload_RelationShip.cpp)
#add_executable(Code8_7 Code08/OperatorOverload_Transfer.cpp)

#Code09
#add_executable(Code9_1 Code09/Inherit_Base.cpp)
#add_executable(Code9_2 Code09/Inherit_ObjectModel.cpp)
#add_executable(Code9_3 Code09/Inherit_ConstructorDestructorTransferOrder.cpp)
#add_executable(Code9_4 Code09/Inherit_DealWithSameName.cpp)
#add_executable(Code9_5 Code09/Inherit_DealWithSameNameObject.cpp)
#add_executable(Code9_6 Code09/Inherit_MoreInherit.cpp)
#add_executable(Code9_7 Code09/Inherit_DiamondInheritance.cpp)

#Code10
#add_executable(Code10_1 Code10/Polymorphism_BaseDemo.cpp)
#add_executable(Code10_2 Code10/Polymorphism_DeepUnderlying.cpp)
#add_executable(Code10_3 Code10/Polymorphism_Calculator_Normal.cpp)
#add_executable(Code10_4 Code10/Polymorphism_Calculator_Poly.cpp)
#add_executable(Code10_5 Code10/Polymorphism_PureFunctionAndAbstractClass.cpp)
#add_executable(Code10_6 Code10/Polymorphism_MakeDrinks.cpp)
#add_executable(Code10_7 Code10/Polymorphism_VirDestructAndPureVirDestruct.cpp)
#add_executable(Code10_8 Code10/Polymorphism_AssemblingComputer.cpp)

#Code11
#add_executable(Code11_1 Code11/FileOperation_WriteFile.cpp)
#add_executable(Code11_2 Code11/FileOperation_ReadFile.cpp)
#add_executable(Code11_3 Code11/FileOperation_WriteBinaryFile.cpp)
add_executable(Code11_4 Code11/FileOperation_ReadBinaryFile.cpp)